log

Wed 13 Mar 2024 08:31:06 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
exercises.c:21:3: error: expected identifier or ‘(’ before ‘return’
   21 | } return numeroMax;
      |   ^~~~~~
Compilation failed
5bd7dc0
